correct some typos
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -22,7 +22,7 @@ affiliation:
     institution   : "Corresponding author: Tominaga_Atsuko@phd.ceu.edu"
 
 abstract: |
-  Experts modulate their performance of actions for teaching purposes, performing slower and exaggerated movements when demonstrating novel actions to novices. The present study asked whether such modulations also occur during teaching performance of a music instrument, where subtle movement modulations are crucial for achieving artistic expression. While exaggerating performances of goal-directed actions outside of artistic contexts may be straightforward, it is an open question whether and how exaggeration for the purpose of teaching operates for actions that are expressive even when performed outside of a teaching context. Pianists were asked to demonstrate to students the techniques required for implementing notated expressions, compared to performing the piece without didactic intentions. Expressions in the piece concerned either articulation (i.e., legato and staccato) or dynamics (i.e., forte and piano). The pianists played either with the goal to perform the piece to an audience or with the goal to teach the respective techniques to novices. When intending to teach articulation, skilled pianists produced more exaggerated staccato. When intending to teach dynamics, they created a larger contrast between forte and piano. We found consistent results across a simple musical scale (Experiment 1) and a more naturalistic piece of music (Experiment 2). These findings show that teaching-specific action modulations generalize to expressive actions and suggest that action modulations serve to highlight the most relevant aspects of the actions to be learnt.
+  Experts modulate their performance of actions for teaching purposes, performing slower and exaggerated movements when demonstrating novel actions to novices. The present study asked whether such modulations also occur during teaching performance of a music instrument, where subtle movement modulations are crucial for achieving artistic expression. While exaggerating performances of goal-directed actions outside of artistic contexts may be straightforward, it is an open question whether and how exaggeration for the purpose of teaching operates for actions that are expressive even when performed outside of a teaching context. Pianists were asked to demonstrate to students the techniques required for implementing notated expressions, compared to performing the piece without didactic intentions. Expressions in the piece concerned either articulation (i.e., legato and staccato) or dynamics (i.e., forte and piano). The pianists played either with the goal to perform the piece to an audience or with the goal to teach the respective techniques to novices. When intending to teach articulation, skilled pianists produced more exaggerated staccato. When intending to teach dynamics, they created a larger contrast between forte and piano. We found consistent results across a simple musical scale (Experiment 1) and a more naturalistic piece of music (Experiment 2). These findings show that teaching-specific action modulations generalise to expressive actions and suggest that action modulations serve to highlight the most relevant aspects of the actions to be learnt.
   
 keywords          : "teaching, skill transmission, sensorimotor communication, artistic expression, music"
 #wordcount         : ""
@@ -94,7 +94,7 @@ One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen
 
 First, participants were allocated to either the teaching or performing condition and asked to practise the excerpt with the notated expression of either articulation or dynamics (*Fig \ref{fig:stimuli} B-C*). As soon as they had produced the excerpt with the notated expression without pitch errors twice consecutively, the test trials began.
 
-In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with the notated expression by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience (see details in *[Supplementary material](#supplementary)* 1). Participants played the piece 8 times per technique per condition, so there were 32 trials in total (2 conditions x 2 techniques x 8 trials). The order of the conditions was blocked and counterbalanced across participants. The order of the techniques within each condition was also blocked and counterbalanced across participants. A leading metronome (80 quarter beats per minute, 8 beats) indicated the target tempo before each trial.
+In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with the notated expression by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience (see details in *[Supplementary Material](#supplementary)* 1). Participants played the piece 8 times per technique per condition, so there were 32 trials in total (2 conditions x 2 techniques x 8 trials). The order of the conditions was blocked and counterbalanced across participants. The order of the techniques within each condition was also blocked and counterbalanced across participants. A leading metronome (80 quarter beats per minute, 8 beats) indicated the target tempo before each trial.
 
 At the end of the experiment, participants filled in a questionnaire asking about their demographic information and experience in piano performance/teaching.
 
@@ -296,7 +296,7 @@ The same apparatus as in Experiment 1 was used. We selected Clementi's Sonatina 
 
 ### Procedure{#procedure-2}
 
-We employed the same procedure as in Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., *Fig \ref{fig:stimuli-2} A*) prior to the experiment so that they had enough time to familiarise themselves with the piece and perform it without pitch errors while performing it with different notated expressions in the lab. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations because there had been less emphasis on expression in the instruction in the performing condition in Experiment 1 (see details in *[Supplementary material](#supplementary)* 1). Third, participants could choose their preferred tempo from one of three options (100, 110 and 120 quarter beats per minute) because some evidence show that musicians have their own preferred tempo, which affects their temporal variability [@zamm_2018]. The chosen tempo was again cued by a leading metronome.  To make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the original sheet music (*Fig \ref{fig:stimuli-2} A*). Those who could not perform the piece without pitch errors twice consecutively within five attempts were excluded from data analysis (as a result, one participant was excluded). The rest of the procedure was identical to Experiment 1.
+We employed the same procedure as in Experiment 1 with several modifications. First, all participants were required to memorise the piece without expressive notations (i.e., *Fig \ref{fig:stimuli-2} A*) prior to the experiment so that they had enough time to familiarise themselves with the piece and perform it without pitch errors while performing it with different notated expressions in the lab. Second, we modified the wording of instructions for the performing condition so that both instructions had the same focus on expressive notations because there had been less emphasis on expression in the instruction in the performing condition in Experiment 1 (see details in *[Supplementary Material](#supplementary)* 1). Third, participants could choose their preferred tempo from one of three options (100, 110 and 120 quarter beats per minute) because some evidence show that musicians have their own preferred tempo, which affects their temporal variability [@zamm_2018]. The chosen tempo was again cued by a leading metronome.  To make sure that participants memorised the piece and had sufficient motor skills, we asked participants to perform the piece without looking at the original sheet music (*Fig \ref{fig:stimuli-2} A*). Those who could not perform the piece without pitch errors twice consecutively within five attempts were excluded from data analysis (as a result, one participant was excluded). The rest of the procedure was identical to Experiment 1.
 
 ### Data analysis
 
@@ -483,11 +483,11 @@ The aim of this study was to investigate how expert pianists modulate their perf
 
 Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As mentioned in the discussion of Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down might be less useful in the context of teaching techniques where timing itself can be used to add an expression to a performance.
 
-One limitation of the study is that although we instructed participants to imagine a situation in which they were teaching musical expression to students, there was no feedback from actual students. It can be expected that teachers would also make didactic modulations in some domains other than acoustic properties, such as gestures if they are physically present in front of students. Moreover, given that teachers modulate their demonstration throughout ongoing interactions with learners [@okazaki_2019], future studies are needed to investigate how experts dynamically adapt their performance to their students’ skill levels and demonstrated abilities. Also, some of the participants in the current study did not have teaching experience at all and even those who had teaching experience had taught for only a few years. It would be important to investigate if our findings would be observed in participants with extensive experience teaching the piano. We summarised descriptive statistics depending on participants' teaching experience (see *[Supplementary material](#supplementary)* 2).
+One limitation of the study is that although we instructed participants to imagine a situation in which they were teaching musical expression to students, there was no feedback from actual students. It can be expected that teachers would also make didactic modulations in some domains other than acoustic properties, such as gestures if they are physically present in front of students. Moreover, given that teachers modulate their demonstration throughout ongoing interactions with learners [@okazaki_2019], future studies are needed to investigate how experts dynamically adapt their performance to their students’ skill levels and demonstrated abilities. Also, some of the participants in the current study did not have teaching experience at all and even those who had teaching experience had taught for only a few years. It would be important to investigate if our findings would be observed in participants with extensive experience teaching the piano. We summarised descriptive statistics depending on participants’ teaching experience (see *[Supplementary Material](#supplementary)* 2).
 
 Another limitation of the study is that it is not certain how the results might generalise to performances of more complex pieces and pieces with fewer notations. In more complex pieces of music, multiple expressive notations could be assigned to one note or phrase. Also, it is rare that almost all the notes are assigned to one expressive notation as in our stimuli. Future studies are needed to determine whether pianists would exaggerate specific parts of a piece or prioritise one aspect over the others given multiple concurrent expressive notations and more possibilities for giving the music different interpretations.
 
-We quantified participants’ sound modulations in terms of tempo, articulation and dynamics so as to examine if and how participants modulate their sound. However, it is possible that participants show didactic modulations in other aspects such as temporal variability and temporal grouping (see *[Supplementary material](#supplementary)* 3 and 4). For example, participants tended to slow down at transition points regardless of the techniques they were teaching although overall, we found that participants played slower only when teaching the piece with the notated articulation. Future research is needed to investigate how musicians make particular modulations in relation to musical structures.
+We quantified participants’ sound modulations in terms of tempo, articulation and dynamics so as to examine if and how participants modulate their sound. However, it is possible that participants show didactic modulations in other aspects such as temporal variability and temporal grouping (see *[Supplementary Material](#supplementary)* 3 and 4). For example, participants tended to slow down at transition points regardless of the techniques they were teaching although overall, we found that participants played slower only when teaching the piece with the notated articulation. Future research is needed to investigate how musicians make particular modulations in relation to musical structures.
 
 Musicians and music teachers tend to consider expressive skills as performers’ most important skills [@lindstrom_2003]. In the present study, experts focused on the teaching of expressions that were notated. However, expression also has other facets [@juslin_2003] that are not only piece-related (e.g., notated expressions) but performer- or context-related (e.g., performer’s interpretation, listening contexts such as recordings or concerts). The ultimate goal of expressive performance is considered to lie in developing performers’ own interpretations of music and convey affects and emotions by using expressive tools such as articulation, dynamics, tempo and timing [@meissner_2021]. The current research opens up the possibility of studying the teaching of expressive performance by demonstrating that pianists could signal didactic intentions without relying on verbal instructions, which are heavily used in actually teaching settings [@woody_2000; @colprit_2000]. Given that students often learn by listening to recordings [@volioti_2017], it is important to investigate how performance itself could affect students’ learning processes.It would be interesting to examine how teachers play (i.e., demonstrate) relates to verbal instructions they give.
 
