upload analysis summary to RPubs
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/experiment-1/analysis/stats/articulation.Rmd
+++ b/experiment-1/analysis/stats/articulation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Articulation Analysis: The Sound of Teaching Music 1'
+title: 'Articulation Analysis: Experiment 1'
 output:
   html_notebook: default
 editor_options: 
