--- a/experiment-1/analysis/stats/dynamics.Rmd
+++ b/experiment-1/analysis/stats/dynamics.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Dynamics Analysis: The Sound of Teaching Music 1'
+title: 'Dynamics Analysis: Experiment 1'
 output:
   html_notebook: default
 editor_options: 
