--- a/experiment-2/analysis/stats/articulation.Rmd
+++ b/experiment-2/analysis/stats/articulation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Articulation Analysis: The Sound of Teaching Music 2'
+title: 'Articulation Analysis: Experiment 2'
 output:
   html_notebook: default
 editor_options: 
