--- a/experiment-2/analysis/stats/dynamics.Rmd
+++ b/experiment-2/analysis/stats/dynamics.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Dynamics Analysis: The Sound of Teaching Music 2'
+title: 'Dynamics Analysis: Experiment 2'
 output:
   html_notebook: default
 editor_options: 
