--- a/experiment-2/analysis/stats/ioi.Rmd
+++ b/experiment-2/analysis/stats/ioi.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Tempo Analysis: The Sound of Teaching Music 2'
+title: 'Tempo Analysis: Experiment 2'
 output:
   html_notebook: default
 editor_options: 
