--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -356,8 +356,7 @@ As Experiment 1, we first report results for performance of the piece with the n
 \hypertarget{inter-onset-intervals-iois-2}{%
 \subsubsection{Inter-onset Intervals (IOIs)}\label{inter-onset-intervals-iois-2}}
 
-A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.97, \emph{SD} = 0.049{]} than in the performing condition {[}\emph{M} = 0.95, \emph{SD} = 0.040{]} while playing the piece with the notated articulation (\emph{t}(19) = 2.47
-, \emph{p} = 0.023, Cohen's \emph{d} = 0.55, two-tailed, \emph{Fig \ref{fig:ioi-2}}). A Wilcoxon Signed-rank test also confirmed that there was a significant difference between the two conditions (\emph{p} = 0.033, \emph{r} = 0.48, two-tailed).
+A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.97, \emph{SD} = 0.049{]} than in the performing condition {[}\emph{M} = 0.95, \emph{SD} = 0.040{]} while playing the piece with the notated articulation (\emph{t}(19) = 2.47, \emph{p} = 0.023, Cohen's \emph{d} = 0.55, two-tailed, \emph{Fig \ref{fig:ioi-2}}). A Wilcoxon Signed-rank test also confirmed that there was a significant difference between the two conditions (\emph{p} = 0.033, \emph{r} = 0.48, two-tailed).
 
 \hypertarget{key-overlap-ratios-kors}{%
 \subsubsection{Key-Overlap Ratios (KORs)}\label{key-overlap-ratios-kors}}
